--- a/paginas/azathan/azathan.html
+++ b/paginas/azathan/azathan.html
@@ -8,6 +8,13 @@
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- CSS globais -->
+<link href="../../css/global.css" rel="stylesheet">
+<link href="../../css/navbar.css" rel="stylesheet">
+<link href="../../css/buttons.css" rel="stylesheet">
+
+<!-- CSS específico de azathan -->
 <link rel="stylesheet" href="style.css">
 
 <!-- Fontes -->
@@ -17,6 +24,46 @@
 </head>
 
 <body>
+
+<!-- Vídeo de fundo -->
+<video id="bg-video" autoplay muted loop playsinline>
+  <source src="../../backgrounds/feixes.mp4" type="video/mp4">
+</video>
+
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom">
+  <div class="container">
+    <!-- Logo -->
+    <a class="navbar-brand" href="../../index.html">
+      <img src="../../imagens/planetanumero.gif" alt="Logo" class="logo-navbar">
+    </a>
+
+    <!-- Hamburguer -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Links -->
+    <div class="collapse navbar-collapse justify-content-end" id="menu">
+      <ul class="navbar-nav gap-3">
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="../../index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="#">SOBRE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="../projetos/projetos.html">PROJETOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill active" href="../curriculo/curriculo.html">CURRÍCULO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="#">CONTATO</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <!-- HERO -->
 <section class="hero d-flex align-items-center justify-content-center text-center">
@@ -78,6 +125,11 @@ function toggleMusic(){
 // toca ao primeiro clique na página
 document.addEventListener("click", () => music.play(), {once:true});
 </script>
+
+<!-- Scripts Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="../../js/main.js"></script>
 
 </body>
 </html>
