--- a/paginas/sablewood/sablewood.html
+++ b/paginas/sablewood/sablewood.html
@@ -4,24 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha Daggerheart – Kaelen</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style_ficha.css">
+
+<!-- CSS globais -->
+<link href="../../css/global.css" rel="stylesheet">
+<link href="../../css/navbar.css" rel="stylesheet">
+<link href="../../css/buttons.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- CSS específico de azathan -->
+<link rel="stylesheet" href="sablewood.css">
 </head>
 
-<script>
-function changeValue(btn, amount){
-    const row = btn.closest(".def-row");
-    const valueSpan = row.querySelector(".value");
-
-    let current = parseInt(valueSpan.innerText);
-    if(isNaN(current)) current = 0;
-
-    valueSpan.innerText = current + amount;
-}
-</script>
-
-
 <body>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom">
+  <div class="container">
+    <!-- Logo -->
+    <a class="navbar-brand" href="../../index.html">
+      <img src="../../imagens/planetanumero.gif" alt="Logo" class="logo-navbar">
+    </a>
+
+    <!-- Hamburguer -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Links -->
+    <div class="collapse navbar-collapse justify-content-end" id="menu">
+      <ul class="navbar-nav gap-3">
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="../../index.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="#">SOBRE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="../projetos/projetos.html">PROJETOS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill active" href="../curriculo/curriculo.html">CURRÍCULO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-pill" href="#">CONTATO</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <div class="container-fluid">
     <div class="row">
@@ -223,4 +253,22 @@ function changeValue(btn, amount){
 </div>
 
 </body>
+
+<script>
+function changeValue(btn, amount){
+    const row = btn.closest(".def-row");
+    const valueSpan = row.querySelector(".value");
+
+    let current = parseInt(valueSpan.innerText);
+    if(isNaN(current)) current = 0;
+
+    valueSpan.innerText = current + amount;
+}
+</script>
+
+<!-- Scripts Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script src="../../js/main.js"></script>
+
 </html>
